# webnotes

./: .gitignore  .pre-commit-config.yaml  Jenkinsfile  README.md  create_admin.py  pom.xml  pyproject.toml  schema.sql  text.txt
.github/workflows/: ci.yaml
app/: __init__.py  config.py  decorators.py  extensions.py  utils.py
app/controllers/: auth_controller.py  class_controller.py  student_controller.py  subject_controller.py  teacher_controller.py
app/forms/: forms_add_grade.py  forms_add_student.py  forms_add_teacher.py  forms_auth.py  forms_delete_grade.py  forms_delete_student.py  forms_delete_teacher.py  forms_edit_student.py  forms_edit_teacher.py
app/models/: class_.py  grade.py  student.py  subject.py  teacher.py  user.py
app/static/css/: styles.css
app/static/css/student/: style.css
app/templates/: error.html
app/templates/admin/: add_student.html  add_teacher.html  base.html  dashboard.html  edit_student.html  edit_teacher.html  students.html  teachers.html
app/templates/auth/: login.html  register.html
app/templates/errors/: base.html  unauthorized.html
app/templates/partials/: _navbar.html
app/templates/student/: add.html  base.html  dashboard.html  dashboardStudent.html  grades.html  homework.html  list.html  mail.html  schedule.html  subject_grades.html
app/templates/teacher/: base.html  class_student.html  class_students.html  dashboard.html  dashboard_teacher.html  student_grade.html  student_grades.html
app/views/: admin_view.py  auth_views.py  common_views.py  student_views.py  teacher_views.py
