[project]
name = "webnotes"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Cir0n", email = ""},
]
dependencies = ["mysql-connector-python>=9.2.0", "flask>=3.1.0", "python-dotenv>=1.0.1", "flask-bcrypt>=1.0.1"]
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false

[tool.pdm.dev-dependencies]
lint = [
    "black>=24.3.0",
    "isort>=5.13.2",
    "flake8>=7.0.0",
]